2014-05-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (window_new_screen_size): Call forget_window_and_nodes
	instead of window_deletion_notifier.
	(window_deletion_notifier): Removed.
	* info/session.c (initialize_window_session): Don't set
	window_deletion_notifier to forget_window_and_nodes.

2014-05-25  Gavin Smith  <gavinsmith0123@gmail.com>
	
	* info/session.c (info_scroll_forward, info_scroll_backward)
	(info_scroll_forward_set_window, info_scroll_backward_set_window)
	(info_scroll_forward_page_only, info_scroll_backward_page_only)
	(info_scroll_forward_page_only_set_window)
	(info_scroll_backward_page_only_set_window)
	(info_scroll_half_screen_down, info_scroll_half_screen_up)
	(info_down_line, info_up_line):
	Rely on checks in _scroll_forward and _scroll_backward for
	negative arguments.

	(_scroll_forward, _scroll_backward): 'key' argument removed.  Callers
	updated.

2014-05-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/filesys.c (info_file_find_next_in_path): Use infopath_next
	to iterate over INFOPATH.  Don't take a path argument.  Callers
	updated.
	(info_file_in_path): Don't take a path argument.  All callers updated.
	
	* info/filesys.c, info/infopath.c (extract_colon_unit): Function
	definition moved.

	* info/infopath.c (INFO_DIR): New typedef.
	(infodirs, infodirs_index, infodirs_slots): New variables.
	(infopath_add): Always add directory to end of search path, checking
	if it doesn't exist or if it is a duplicate.  Check for inode == 0
	for MS-Windows copied from dir.c:new_dir_file_p.  Argument 'where'
	removed.  All callers updated.
	(infopath_add_dir) New function.
	(infopath_first, infopath_next): Return values not freed by caller.
	Callers updated.
	(infopath, infopath_string): Function renamed.  Return value to
	be freed by caller.  Caller updated.
	(build_infopath_from_path): Rely on duplicate detection in
	infopath_add.  Add directories to search path instead of returning
	a string containing their names.